--- a/module2-solution/CSS/Style.css
+++ b/module2-solution/CSS/Style.css
@@ -46,6 +46,7 @@ p {
 	}
 }
 
+/******* Tablet *******/
 @media (min-width: 768px) and (max-width: 991px){
 
 	.col-md-1{
@@ -61,10 +62,11 @@ p {
 	}
 }
 
+/******* Mobile *******/
 @media (max-width: 767px){
 	.col-sm-1{
 		width: 90%;
-		margin: 20px;
-
+		margin: 10px;
+		float: left;
 	}
 }
